--- a/src/App.css
+++ b/src/App.css
@@ -9,9 +9,11 @@
 .menu .login {
   display: flex; align-items: center; gap: 10px;
 }
-
 .menu Button, .uzenet Button {
   text-transform: none;
+}
+.menu .admin {
+  margin-left: 10px;
 }
 
 .page {
